fix(tag): correct vertical alignment of label and clear button

--- a/components/tag/index.css
+++ b/components/tag/index.css
@@ -234,10 +234,12 @@ governing permissions and limitations under the License.
     white-space: nowrap;
     text-overflow: ellipsis;
 
-    margin-block-start: var(--mod-tag-label-spacing-block, var(--spectrum-tag-label-spacing-block));
+    margin-block-start: calc(var(--mod-tag-label-spacing-block, var(--spectrum-tag-label-spacing-block))
+                            - var(--mod-tag-border-width, var(--spectrum-tag-border-width)));
 
     /* space from label text to end edge */
-    margin-inline-end: var(--mod-tag-label-spacing-inline-end, var(--spectrum-tag-label-spacing-inline-end));
+    margin-inline-end: calc(var(--mod-tag-label-spacing-inline-end, var(--spectrum-tag-label-spacing-inline-end))
+                            - var(--mod-tag-border-width, var(--spectrum-tag-border-width)));
   }
 
   > .spectrum-Icon,
@@ -262,8 +264,10 @@ governing permissions and limitations under the License.
 
   /* clear button */
   .spectrum-Tag-clearButton {
-    margin-block-start: var(--mod-tag-clear-button-spacing-block, var(--spectrum-tag-clear-button-spacing-block));
-    margin-block-end: var(--mod-tag-clear-button-spacing-block, var(--spectrum-tag-clear-button-spacing-block));
+    margin-block-start: calc(var(--mod-tag-clear-button-spacing-block, var(--spectrum-tag-clear-button-spacing-block))
+                            - var(--mod-tag-border-width, var(--spectrum-tag-border-width)));
+    margin-block-end: calc(var(--mod-tag-clear-button-spacing-block, var(--spectrum-tag-clear-button-spacing-block))
+                          - var(--mod-tag-border-width, var(--spectrum-tag-border-width)));
 
     /* move button negative calc to cancel label end margin, then add button start margin */
     margin-inline-start: calc(var(--mod-tag-clear-button-spacing-inline-start, var(--spectrum-tag-clear-button-spacing-inline-start))
